apps/synapse-proxy/overlays/nishir-tailnet/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: matrix
  annotations:
    tailscale.com/funnel: "true"
    tailscale.com/tags: tag:web
spec:
  defaultBackend:
    service:
      name: synapse-proxy
      port:
        name: https
  tls:
    - hosts:
        - matrix
  ingressClassName: tailscale
