apps/synapse-proxy/overlays/nishir-tailnet/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: matrix
  annotations:
    tailscale.com/funnel: "true"
    tailscale.com/tags: tag:web
spec:
  ingressClassName: tailscale
